# termite

./: .gitignore  .goutputstream-2QVR02  .goutputstream-RPJF02  .keybinding.md.swp  BUGS.txt  Cargo.toml  keybinding.md  log.sh  sample.rs  start.sh
src/: automata.rs  config.rs  document.rs  editor.rs  filetype.rs  highlighting.rs  main.rs  row.rs  terminal.rs  utils.rs
