[package]
name = "termite"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
once_cell = "1.20.3"
rayon = "1.10.0"
serde = "1.0.217"
termion = "4.0.3"
tokio = { version = "1.43.0", features=["fs", "rt-multi-thread", "macros", "io-util", "sync"] }
unicode-segmentation = "1.12.0"

[[bin]]
name = "graph"
path = "./test.rs"

[[bin]]
name = "tokio"
path = "./test2.rs"
